# artOptimal

./: .gitignore  CMakeLists.txt  README.md  artOptimal.cu  input_0.txt  matplotlibcpp.h  verificationTool.py
src/: artOptimal.cu
